@@ -1,3 +1,8 @@
+2004-10-21 Bart Hakvoort  <gparted@users.sf.net>
+
+	* include/Dialog_Partition_Resize_Move.h,
+	  src/Dialog_Partition_Resize_Move.cc: fixed some bugs with minimum size of resizable partition + some codecleanups.
+
 2004-10-20 Bart Hakvoort  <gparted@users.sf.net>
 
 	* src/Dialog_Base_Partition.cc (Get_New_Partition): Tweaked resizingbehaviour a bit. This solved some minor annoyances.
